--- a/Mvvm.Blazor/Pages/FetchData.razor
+++ b/Mvvm.Blazor/Pages/FetchData.razor
@@ -9,7 +9,7 @@
 
 <p>@ViewModel.Description</p>
 
-@if (forecasts == null)
+@if (ViewModel.Forecasts == null)
 {
     <p>
         <em>Loading...</em>
@@ -41,12 +41,13 @@ else
 }
 
 @code {
-    private WeatherForecast[] forecasts;
-    
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        await ViewModel.GetForecastAsync(DateTime.Now);
+        if (firstRender)
+        {
+            await ViewModel.GetForecastAsync(DateTime.Now);
+            StateHasChanged();
+        }
+        await base.OnAfterRenderAsync(firstRender);
     }
-
-
 }
